# Discharge_summaries

./: README.md  pyproject.toml  requirements.txt
data/: clinical_correction_memory.json  patient_2_full_ocr.json
outputs/: learning_curve.json  patient_2_summary.json  patient_2_summary.md
src/discharge_summaries/: coordinator.py  crew.py  main.py
src/discharge_summaries/agents/: clinic_agents.py
src/discharge_summaries/feedback/: learning_loop.py
src/discharge_summaries/models/: clinic_models.py
src/discharge_summaries/tools/: clinic_tools.py
traces/: patient_2_trace.txt
